--- a/app/assets/stylesheets/tenon/layout/tenon-content/embed-code.scss
+++ b/app/assets/stylesheets/tenon/layout/tenon-content/embed-code.scss
@@ -4,11 +4,11 @@ a.open-embed-modal {
   display: block;
   padding: 5px 0;
   text-transform: uppercase;
-  color: $primary-text-color;
+  color: $primary-fg-color;
 }
 
 .tn-tc-row:hover .open-embed-modal {
-  color: $primary-text-color;
+  color: $primary-fg-color;
 }
 
 .embed {
