--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -3,27 +3,29 @@
     = render 'tenon/shared/breadcrumbs'
     .actions
       - if can?(:publish, @post)
-        %button.btn.btn-comp.submit{ data: { disable_with: "Please wait..." } } Save
+        %button.btn.btn-primary.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      - if can?(:create, Tenon::ItemVersion)
-        = save_draft_button(@post)
-        .last-autosave
+      %i.icon.ion-android-more-vertical
+      /
+        - if can?(:create, Tenon::ItemVersion)
+          = save_draft_button(@post)
+          .last-autosave
 
-      = clear_draft_link if params[:version]
-      = load_draft_link(@post)
-      - if @post.persisted?
-        = link_to 'Delete', @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link'
+        = clear_draft_link if params[:version]
+        = load_draft_link(@post)
+        - if @post.persisted?
+          = link_to 'Delete', @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link'
 
   %main
     = error_messages_for :post
 
-    .label Details
+    .label Write This Post
     .panel
       = f.text_field :title, required: true
       = f.rich_text :excerpt
       = f.tenon_content :content
 
-    .label More Details
+    .label Publication Details
     .panel
       - unless @categories.blank?
         = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
