--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -1,6 +1,6 @@
 %nav.util-nav
 
-  %a.toggle-nav{ href: '#', data: { toggler_class: 'nav-open', toggler_selector: 'body' } }
+  %a.toggle-main-nav{ href: '#' }
     .burger
 
   = link_to image_tag('tenon/tenon_icon.png'), tenon.root_path, class: 'brand-logo center'
