--- a/app/assets/stylesheets/tenon/layout/main-nav.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav.scss
@@ -1,4 +1,6 @@
 .main-nav {
+  $icon-width: $default-spacing / 3 + 22px;
+
   @include transform(translate(-$main-nav-width, 0));
   @include font-size-smaller;
   position: fixed;
@@ -11,31 +13,60 @@
   height: 100%;
   color: $main-nav-fg-color;
 
-  ul {
-    padding: $default-spacing / 2 $default-spacing;
-  }
-
-  li {
-    padding: 0 0 $default-spacing / 2;
-  }
-
-  a {
-    color: $main-nav-fg-color;
-    &.active {
-      @include font-sans-n6;
-    }
-  }
-
-  i {
-    margin-right: 5px;
-  }
-
   .current-user {
     padding: 0 $default-spacing;
     height: $toolbar-height;
     line-height: $toolbar-height;
     background: darken($body-bg-color, 5%);
     box-shadow: inset -4px 1px 9px -6px rgba(0, 0, 0, 0.46);
+  }
+
+  ul {
+    padding: $default-spacing / 2;
+    > :hover { background-color: rgba($white, 0.35); }
+    > .active { background-color: $white; }
+    > li {
+      border-radius: $default-border-radius;
+      position: relative;
+    }
+  }
+
+  .active i { color: $primary-color; }
+
+  .open .nav-item-toggle i:before {
+    content: '\f2f4'
+  }
+
+  a {
+    display: block;
+    padding: $default-spacing / 3 $default-spacing / 2;
+    color: $main-nav-fg-color;
+    &:hover { text-decoration: none; }
+  }
+
+  i {
+    @include font-size($h3-size);
+    display: inline-block;
+    width: $icon-width;
+    color: $light-fg-color;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  // Subnav
+  .nav-item-toggle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    i { color: $primary-fg-color; }
+  }
+
+  li li a { padding: 0 0 0 $icon-width; }
+  li li:hover { background: transparent; }
+  .open ul { display: block; }
+  li ul {
+    padding-top: 0;
+    display: none;
   }
 }
 
