--- a/spec/dummy/app/views/tenon/posts/index.html.haml
+++ b/spec/dummy/app/views/tenon/posts/index.html.haml
@@ -1,4 +1,5 @@
 = react_component 'ResourceIndexRoot',
     title: 'Posts',
+    breadcrumbs: breadcrumb_links,
     recordsPath: posts_path(format: 'json'),
     newPath: new_post_path
