--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -25,6 +25,7 @@
 @import './ui/btn';
 @import './ui/btn-floating';
 @import './ui/current-user';
+@import './ui/dropdown-content';
 @import './ui/lists';
 @import './ui/panel';
 @import './ui/typography';
