--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -36,6 +36,11 @@ $contrast-bg-color: $grey;
 $light-border-color: $med-grey;
 $required-color: $red;
 
+// Dropdown
+$dropdown-bg-color: $white;
+$dropdown-hover-bg-color: $off-white;
+$dropdown-fg-color: $light-fg-color;
+
 // Sidebar
 $sidebar-bg-color: #242133;
 $sidebar-highlight: #3a3848;
