--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -5,17 +5,18 @@
       - if can?(:publish, @post)
         %button.btn.btn-primary.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action{ href: '#' }
+      %a.action.dropdown-button{ href: '#', data: { activates: 'form-dropdown'} }
         %i.icon.ion-android-more-vertical
-      /
-        - if can?(:create, Tenon::ItemVersion)
-          = save_draft_button(@post)
-          .last-autosave
 
-        = clear_draft_link if params[:version]
-        = load_draft_link(@post)
+      %ul.dropdown-content#form-dropdown
+        - if can?(:create, Tenon::ItemVersion)
+          = render 'tenon/shared/draft_controls', obj: @post
+
         - if @post.persisted?
-          = link_to 'Delete', @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link'
+          %li
+            = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+              %i.icon.ion-trash-a
+              Delete
 
   %main
     = error_messages_for :post
