--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -5,7 +5,7 @@
       - if can?(:publish, @post)
         %button.btn.btn-primary.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action.dropdown-button{ href: '#', data: { activates: 'form-dropdown'} }
+      %a.action.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
         %i.icon.ion-android-more-vertical
 
       %ul.dropdown-content#form-dropdown
