--- a/app/views/tenon/shared/_seo_fields.html.haml
+++ b/app/views/tenon/shared/_seo_fields.html.haml
@@ -1,5 +1,5 @@
 .label SEO Tools
-.panel
+.panel.block
   .form-group
     = f.text_field :seo_title, :class => "title", :style => "width: 100%;", :label => "Title Tag", :explanation => "This is the title that will show on search engine results and in the title bar of a visitor's browser.  By default, this will use the item's title."
 
