--- a/app/assets/stylesheets/tenon/layout/main-nav/links.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav/links.scss
@@ -1,60 +1,78 @@
 .main-nav > ul {
-  padding: $default-spacing / 2;
-
+  padding: $default-spacing/2;
   > li {
-    margin-bottom: $default-spacing / 4;
-    border-radius: $default-border-radius;
     position: relative;
+    margin-bottom: 1px;
+    padding: $default-spacing/5 0;
+    border-radius: $default-border-radius;
   }
-
-  > :hover { background-color: rgba($white, 0.35); }
-
+  > :hover {
+    background-color: rgba($white, .45);
+    i {
+      color: $primary-color;
+    }
+  }
   > .active {
     background-color: $white;
-    i { color: $primary-color; }
+    i {
+      color: $primary-color;
+    }
   }
 
-
   a {
+    line-height: $default-spacing;
     display: block;
-    padding: 0 $default-spacing / 2;
+    padding: 0 $default-spacing/2;
     color: $main-nav-fg-color;
-    &:hover { text-decoration: none; }
+    &:hover {
+      text-decoration: none;
+    }
   }
 
   i {
-    @include font-size($h3-size);
+    @include font-size($h4-size);
+    line-height: $default-spacing;
     display: inline-block;
     width: $icon-width;
-    color: $light-fg-color;
     vertical-align: middle;
+    color: $light-fg-color;
   }
 
   // Subnav
   .nav-item-toggle {
     position: absolute;
-    top: 0;
+    top: $default-spacing/5;
     right: 0;
-    i { color: $primary-fg-color; }
+    i {
+      text-align: center;
+      color: $primary-fg-color;
+    }
   }
 
   .open .nav-item-toggle i::before {
-    content: '\f2f4';
+    content: "\f2f4";
   }
 
   li ul {
-    padding-top: 0;
     display: none;
+    padding-top: 0;
   }
 
-  .open ul { display: block; }
+  .open ul {
+    display: block;
+  }
 
   li li {
     $horz-padding: $icon-width + $default-spacing / 2;
 
-    a { padding: 0 0 $default-spacing / 4 $horz-padding; }
-    &:hover { background: transparent; }
-    &:last-child { margin-bottom: 0; }
+    a {
+      padding: 0 0 $default-spacing / 4 $horz-padding;
+    }
+    &:hover {
+      background: transparent;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
-
 }
