--- a/app/assets/stylesheets/tenon/layout/main-nav/structure.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav/structure.scss
@@ -2,21 +2,21 @@
   @include transform(translate(-$main-nav-width, 0));
   @include font-size-smaller;
   position: fixed;
+  z-index: 998;
   top: $util-nav-height;
   left: 0;
-  z-index: 998;
-  border-right: 1px solid $light-border-color;
-  box-shadow: inset -4px 1px 9px -6px rgba(0, 0, 0, 0.46);
   width: $main-nav-width;
   height: 100%;
   color: $main-nav-fg-color;
+  border-right: 1px solid $light-border-color;
+  box-shadow: inset -4px 1px 9px -6px rgba(0, 0, 0, .46);
 }
 
 .nav-pusher {
   position: relative;
   left: 0;
-  min-height: 100vh;
   width: 100%;
+  min-height: 100vh;
 }
 
 .main-nav-open {
