--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -38,6 +38,8 @@
 @import "./layout/main-nav/links";
 @import "./layout/util-nav";
 @import "./layout/toolbar";
+@import "./layout/toolbox";
+@import "./layout/quick-search";
 @import "./layout/record-list";
 @import "./layout/record-panel";
 @import "./layout/tenon-content/base";
