--- a/app/assets/stylesheets/tenon/layout/main.scss
+++ b/app/assets/stylesheets/tenon/layout/main.scss
@@ -1,11 +1,11 @@
 body {
-  background-color: $body-bg-color;
   overflow-x: hidden;
+  background-color: $body-bg-color;
 }
 
 main {
-  padding-top: $util-nav-height + $toolbar-height + $default-spacing;
-  margin: 0 auto;
   width: 90%;
   max-width: 1170px;
+  margin: 0 auto;
+  padding-top: $util-nav-height + $toolbar-height;
 }
