--- a/app/assets/stylesheets/tenon/layout/toolbox.scss
+++ b/app/assets/stylesheets/tenon/layout/toolbox.scss
@@ -4,7 +4,7 @@
   padding: $default-spacing/2 $default-spacing;
   border-top: 1px solid $light-border-color;
   background-color: $primary-color;
-  p {
+  p, h6 {
     margin: 0;
     color: $white;
   }
