--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -16,6 +16,7 @@
 @import "./helpers/font-size";
 @import "./helpers/fonts";
 @import "./helpers/transitions";
+@import "./helpers/truncate";
 @import "./helpers/z-depth";
 
 // UI ELEMENTS
