--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -30,5 +30,7 @@ $smaller-size: 14;
 $smaller-line-height: 22;
 $smallest-size: 12;
 $smallest-line-height: 20;
+
+// Icons
 $btn-floating-icon-size: 24;
 $tool-toggle-icon-size: 18;
