--- a/app/assets/stylesheets/tenon/layout/record-panel.scss
+++ b/app/assets/stylesheets/tenon/layout/record-panel.scss
@@ -50,7 +50,7 @@
   display: none;
   padding-top: $default-spacing/3;
   .actions {
-    border-top: 1px solid $off-white;
+    border-top: 1px solid $light-border-color;
     a {
       @include font-size-smaller;
       line-height: $default-spacing*2;
