--- a/app/assets/stylesheets/tenon/ui/breadcrumbs.scss
+++ b/app/assets/stylesheets/tenon/ui/breadcrumbs.scss
@@ -6,11 +6,11 @@
     &:after {
       @extend .ion;
       position: relative;
-      top: -1px;
+      // top: -1px;
       display: inline-block;
-      padding: 0 $default-spacing / 3;
+      padding: 0 $default-spacing/2;
       content: $ionicon-var-ios-arrow-forward;
-      color: $dark-grey;
+      color: $light-border-color;
     }
 
     &:last-of-type:after {
