--- a/app/views/tenon/shared/_seo_fields.html.haml
+++ b/app/views/tenon/shared/_seo_fields.html.haml
@@ -1,6 +1,6 @@
 .form-label SEO Tools
 .panel.block
-  = f.text_field :seo_title, label: 'Title Tag', explanation: 'This is the title that will show on search engine results and in the title bar of a visitor\'s browser.  By default, this will use the item\'s title.'
+  = f.text_field :seo_title, label: 'Title Tag', explanation: 'This is the title that will show on search engine results and in the title bar of a visitor\'s browser.  By default, this will use the item\'s title.', placeholder: ''
 
   .row
     .inner6
