--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -1,5 +1,5 @@
 .tn-tc{class: field}
-  %label
+  %label.tn-tc-label
     - if defined?(lang)
       = field.gsub("_#{lang}", '').to_s.titleize
       (#{lang_title})
@@ -15,9 +15,8 @@
       = fa_icon('eye')
       %span Edit in Preview Mode
 
-    = link_to '#', class: 'tn-tc-add-content btn btn-primary initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' } do
-      = fa_icon('plus-circle')
-      %span Add Content
+    = link_to '#', class: 'tn-tc-add-content btn btn-floating initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
+      %i.icon.ion-android-add
 
   .tn-tc-wrap
     .tn-tc-sizes
@@ -37,4 +36,3 @@
           - Tenon::TenonContent::RowTypes::LIBRARY_ROW_TYPES.each do |title, row_type|
             %li= row_link(title, row_type, field, f)
         .spacer
-
