--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -94,6 +94,7 @@ $tool-toggle-fg-color: $white;
 // Main Nav
 $main-nav-bg-color: $light-grey;
 $main-nav-fg-color: $black;
+$main-nav-hover-color: $grey;
 
 // Util Nav
 $util-nav-bg-color: $primary-color;
