--- a/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
+++ b/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
@@ -2,8 +2,8 @@
   = nav_item 'Asset Library', assets_path, 'image'
   = nav_item 'Pages', pages_path, 'ios-paper'
   = nav_item 'Posts', posts_path, 'ios-paper-outline', active: ['post_categories'].include?(controller_name) do
-    %li= link_to 'Categories', post_categories_path
-    %li= link_to 'Comments', comments_path
+    %li= nav_item 'Categories', post_categories_path, active: ['post_categories'].include?(controller_name)
+    %li= nav_item 'Comments', comments_path, active: ['comments'].include?(controller_name)
   = nav_item 'Users', users_path, 'person-stalker'
   = nav_item 'Events', events_path, 'calendar'
   = nav_item 'Galleries', galleries_path, 'images'
